# affinis

./: .gitignore  .gitlab-ci.yml  pyproject.toml
affinis/: __init__.py  associations.py  distance.py  filter.py  jax_utils.py  kernels.py  metrics.py  plots.py  priors.py  proximity.py  sample.py  utils.py
data/: .gitignore  snafu_sample.csv.dvc
docs/: RandomTreeSampling.ipynb  RandomTreeSampling.md  edges-as-data-checkpoint.ipynb  edges-as-data-checkpoint.md  edges-as-data-framework.ipynb  edges-as-data-framework.md  edges-as-data.ipynb  edges-as-data.md  fluency.ipynb  fluency.md  hdbscan.ipynb  highschool.ipynb  hyperboledges.ipynb  hyperboledges.md  observation-MSTs.ipynb  observation-MSTs.md  regularized-laplacian.ipynb  regularized-laplacian.md
experiments/: dvc.yaml  params.yaml
experiments/random_graphs/: random_block_graphs.coco  sim_study.coco
experiments/random_graphs/data/sim-study.zarr/tree/: .gitignore
experiments/semantic_network/: fluency_network.coco
manual/: _config.yml  _toc.yml  api.rst  index.md  install.md
tests/: test_affinis.py
