[tool.poetry]
name = "affinis"
version = "0.6.0"
description = ""
authors = ["Rachael Sexton <rtbs@nist.gov>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scipy = "^1.10"
plum-dispatch = "^2.2.2"
jaxtyping = "^0.2.25"
sparse = "^0.15.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.9.2"
seaborn = "^0.12.1"
black = "^23.3.0"
ruff = "^0.1"
pytest = "^8.3.3"
toolz = "^0.12.0"

[tool.poetry.group.docs.dependencies]
pydlc = "^0.2"
# pygraphviz = "^1.11"
netgraph = "^4.12.11"
pyvis = "^0.3.2"
jupyter-book = "^1.0.2"
sphinx-autodoc-typehints = "<2.4.0"
scikit-learn = "^1.2.0"
pandas = ">=1.5.3"
networkx = ">=3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
